--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,23 @@ nav {
   background-color: #218838;
 }
 
+.disabled-link {
+  font-size: small;
+  color: grey;
+  pointer-events: none;
+  text-decoration: none;
+}
+
+.card.card-custom {
+  margin-top: 15px !important;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;    
+    width: 42%; 
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   .toggle-button {
